# modbus_slave_simulator

./: CMakeLists.txt  README.md
forms/: mainwindow.ui
src/: CMakeLists.txt  QTcpServerInterface.cpp  QTcpServerInterface.h  mainwindow.cpp  mainwindow.h
